# datasaki_backend

./: .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0b8304a2d7ab_created_dataset_table.py  0d097a42b025_update_table_structure_2.py  229836e674d5_update_table_structure.py  29005d530c8d_initial_schema.py  2d49121fd0d0_update_table_structure_3.py  35aa5c326029_foregin_key_update.py  56f7b7de5095_add_llm_model.py  5b286feb734a_update_connector_table_structure.py  8da061a5962f_update_connector_table_structure_for_.py  a57204c88714_update_table_structure_4.py  a82f15a4e63a_add_datasets_relationship_to_connector.py  c55dcfd85c7e_created_dataset_table.py
app/: dependencies.py  main.py
app/api/routers/: dataset_router.py  llm_router.py
app/api/routes/: auth.py  connector.py  dataset.py  google_oauth.py  health.py  llm.py  logs.py  ml.py  reader.py
app/certs/: ssl-cert.pem  ssl-key.pem
app/core/: api_logs.py  config.py  exceptions.py  google_oauth.py  logging.py  security.py
app/core/agents/: connector_agent.py  reader_agent.py  writer_agent.py
app/core/agents/llm/: factory.py  implementations.py  interfaces.py  service.py
app/db/: __init__.py  base_class.py  database.py  user_crud.py
app/middleware/: auth.py  rbac.py
app/models/: __init__.py  company.py  connector.py  dataset.py  llm.py  log.py  request_log.py  resource.py  role.py  user.py
app/schemas/: company.py  connector.py  dataset.py  llm.py  ml.py  user.py
app/services/: auth_service.py  connector_service.py  data_catalog.py  dataset_service.py  llm_service.py  ml_service.py
app/utils/: logging.py  readers.py
scripts/: generate_certs.py  run_dev.py
